solved alignment issue in the online usernames tab

--- a/public/main.css
+++ b/public/main.css
@@ -24,7 +24,7 @@ body {
 
 #header nav {
   right: 3rem;
-  top: 24px;
+  top: 36px;
   position: absolute;
 }
 
@@ -34,8 +34,8 @@ body {
 }
 
 #online li {
-  padding: 10px;
-  text-align: center;
+  padding: 10px 14px;
+  text-align: left;
   cursor: pointer;
 }
 
@@ -62,12 +62,12 @@ body {
   background-color: #1a4d5e;
   color: white;
   cursor: pointer;
-  padding: 18px;
-  width: 10rem;
+  padding: 15px;
+  width: 13rem;
   border: none;
-  text-align: left;
+  text-align: center;
   outline: none;
-  font-size: 15px;
+  font-size: 18px;
   text-align: center;
   border-radius: 20px;
 }
@@ -82,7 +82,7 @@ body {
   display: none;
   overflow: hidden;
   background-color: #f1f1f1;
-  width: 10rem;
+  width: 13rem;
   border-radius: 10px;
 }
 
